# localize

./: .gitignore  Makefile  README.md  gmotest.hs  hgettext.hs  localize.cabal  stack.yaml
Data/: Gmo.hs
Text/: Localize.hs
Text/Localize/: IO.hs  Load.hs  Locale.hs  State.hs  Types.hs
examples/: Makefile  gmodump.hs  gmotest.hs  iotest.hs
examples/po/: fr.po  ru.po
