name:                localize
version:             0.2.0.0
synopsis:            GNU Gettext-based messages localization library
license:             BSD3
license-file:        LICENSE
author:              IlyaPortnov
maintainer:          portnov84@rambler.ru
-- copyright:           
category:            Text
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Text.Localize 
  build-depends:       base > 4 && < 5,
                       binary >=0.7,
                       bytestring ==0.10.*,
                       text >= 1.2,
                       containers >=0.5,
                       text-format-heavy >= 0.1,
                       haskell-gettext >= 0.1.1.0,
                       time >=1.4,
                       transformers >=0.3,
                       Glob >= 0.7.14
